fix: force dark mode so that on browsers that have light mode, site doesn't tweak out

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,16 @@
   --foreground: #171717;
 }
 
+.dark {
+  --background: #0a0a0a;
+  --foreground: #ededed;
+}
+
+html[class~="dark"] {
+  --background: #0a0a0a;
+  --foreground: #ededed;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
